# django-critical-css

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  Makefile  Pipfile  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
critical/: __init__.py  admin.py  api.py  apps.py  exceptions.py  models.py  services.py  tasks.py  utils.py
critical/management/commands/: empty_critical_css.py
critical/migrations/: 0001_initial.py
critical/signals/: handlers.py
critical/templates/critical/: critical.html
critical/templatetags/: critical_tags.py
docs/: Makefile  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
examples/critical-example/: README.rst  manage.py
examples/critical-example/criticalexample/: apps.py  settings.py  urls.py  views.py  wsgi.py
examples/critical-example/criticalexample/static/css/: styles.css
examples/critical-example/criticalexample/templates/: example.html
tests/: cms_settings.py  factories.py  settings.py  test_api.py  test_commands.py  test_models.py  test_services.py  test_signals.py  test_tasks.py  test_templatetags.py  test_utils.py  urls.py
tests/resources/: backend_mock.py
