[tool.black]
line-length = 96
skip-string-normalization = true
skip-numeric-underscore-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
)/
'''

[tool.poetry]
name = "django-critical-css"
version = "0.0.2"
description = "django-critical-css aims to speed up webpage rendering by saving critical css in db."

license = "MIT"

authors = [
    "Magdalena Rother <rother.magdalena@gmail.com>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/lenarother/django-critical-css"
homepage = "https://github.com/sdispater/poetry"

keywords = ['django', 'critical-css', 'critical-path', 'pagespeed']

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"

django = "*"
requests = "*"
django-rq = "*"
django-inline-static = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-flake8 = "*"
pytest-isort = "*"
factory-boy = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
tox = "*"
isort = "*"
